Изнасяне на сервизи и база в отделни проекти

--- a/VocationManager/Views/Users/Details.cshtml
+++ b/VocationManager/Views/Users/Details.cshtml
@@ -1,5 +1,6 @@
 ﻿@using VocationManager.Services.DTOs
 @using Microsoft.AspNetCore.Mvc.TagHelpers
+@using VocationManager.Services
 @model VocationManager.Data.ApplicationUser
 
 @{
