--- a/VocationManager/Views/Users/Index.cshtml
+++ b/VocationManager/Views/Users/Index.cshtml
@@ -1,4 +1,6 @@
 ﻿@using VocationManager.Services.DTOs
+@using VocationManager.Services
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 @model List<VocationManager.Data.ApplicationUser>
 
 @{
