--- a/VocationManager/Views/Shared/_Layout.cshtml
+++ b/VocationManager/Views/Shared/_Layout.cshtml
@@ -1,4 +1,6 @@
 ﻿@using VocationManager.Services.DTOs
+@using VocationManager.Services
+@using Microsoft.AspNetCore.Mvc.TagHelpers
 <!DOCTYPE html>
 <html lang="en">
 <head>
