Изнасяне ан логика по потребители в сервиз

--- a/VocationManager/Views/Users/Index.cshtml
+++ b/VocationManager/Views/Users/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using VocationManager.Services.DTOs
 @using VocationManager.Services
 @using Microsoft.AspNetCore.Mvc.TagHelpers
-@model List<VocationManager.Data.ApplicationUser>
+@model ICollection<VocationManager.Data.ApplicationUser>
 
 @{
     ViewData["Title"] = "Index";
