--- a/VocationManager/Views/Users/Delete.cshtml
+++ b/VocationManager/Views/Users/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model VocationManager.Data.ApplicationUser
+﻿@model VocationManager.Services.DTOs.BaseUserDto
 
 @{
     ViewData["Title"] = "Delete";
@@ -12,10 +12,10 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.UserName)
+            @Html.DisplayNameFor(model => model.Username)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.UserName)
+            @Html.DisplayFor(model => model.Username)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
