--- a/VocationManager/Views/Users/Create.cshtml
+++ b/VocationManager/Views/Users/Create.cshtml
@@ -47,14 +47,16 @@
             </div>
             <br />
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-success" />
+                <a asp-action="Index">
+                    <button class="btn btn-primary" type="button">
+                        <i class="fas fa-backward"></i> Back to List
+                    </button>
+                </a>
+
+                <input type="submit" value="Create" class="btn btn-success"/>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
