--- a/VocationManager/Views/Users/Edit.cshtml
+++ b/VocationManager/Views/Users/Edit.cshtml
@@ -34,14 +34,17 @@
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <br/>
+                <a asp-action="Index">
+                    <button class="btn btn-primary" type="button">
+                        <i class="fas fa-backward"></i> Back to List
+                    </button>
+                </a>
+
+                <input type="submit" value="Save" class="btn btn-success"/>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
