Дизайнерски промени при потребителските страници + валидация CEO да не може да изтрие себе си

--- a/VocationManager/Views/Users/Details.cshtml
+++ b/VocationManager/Views/Users/Details.cshtml
@@ -1,61 +1,73 @@
 ﻿@using VocationManager.Services.DTOs
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @using VocationManager.Services
+@using System.Security.Claims
+
 @model BaseUserDto
 
 @{
     ViewData["Title"] = "Details";
 }
 
-<h1>Details</h1>
 
-<div>
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Username)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Username)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FirstName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FirstName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LastName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LastName)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Index" >
-        <button class="btn btn-primary">
-            <i class="fas fa-backward"></i> Back to List
-        </button>
-    </a>
-
-    @if (User.IsInRole(Enum.GetName(DefaultRoles.CEO)))
-    {
-        <a asp-action="Edit" asp-route-id="@Model?.Id">
-            <button class="btn btn-warning">
-                <i class="fas fa-user-edit"></i> Edit
+<div class="card light-shadow m-0 m-auto col-5">
+    <div class="img-fluid text-center mt-1">
+        <img class="card-img-top img-fluid" style="width: 20rem" style="object-fit: contain" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png" alt="Person image">
+    </div>
+    <div class="card-body">
+        <h5 class="card-title">User details</h5>
+        <div>
+            <dl class="row">
+                <dt class="col-sm-3">
+                    @Html.DisplayNameFor(model => model.Username)
+                </dt>
+                <dd class="col-sm-9">
+                    @Html.DisplayFor(model => model.Username)
+                </dd>
+                <dt class="col-sm-3">
+                    @Html.DisplayNameFor(model => model.Email)
+                </dt>
+                <dd class="col-sm-9">
+                    @Html.DisplayFor(model => model.Email)
+                </dd>
+                <dt class="col-sm-3">
+                    @Html.DisplayNameFor(model => model.FirstName)
+                </dt>
+                <dd class="col-sm-9">
+                    @Html.DisplayFor(model => model.FirstName)
+                </dd>
+                <dt class="col-sm-3">
+                    @Html.DisplayNameFor(model => model.LastName)
+                </dt>
+                <dd class="col-sm-9">
+                    @Html.DisplayFor(model => model.LastName)
+                </dd>
+            </dl>
+        </div>
+        <a asp-action="Index" >
+            <button class="btn btn-primary">
+                <i class="fas fa-backward"></i> Back to List
             </button>
         </a>
 
-        <a asp-action="Delete" asp-route-id="@Model?.Id">
-            <button class="btn btn-danger">
-                <i class="fas fa-user-times"></i> Delete
-            </button>
-        </a>
-    }
+        @if (User.IsInRole(Enum.GetName(DefaultRoles.CEO)))
+        {
+            <a asp-action="Edit" asp-route-id="@Model.Id">
+                <button class="btn btn-warning">
+                    <i class="fas fa-user-edit"></i> Edit
+                </button>
+            </a>
+
+            @if (User.FindFirstValue(ClaimTypes.NameIdentifier) != @Model?.Id)
+            {
+                <a asp-action="Delete" asp-route-id="@Model?.Id">
+                    <button class="btn btn-danger">
+                        <i class="fas fa-user-times"></i> Delete
+                    </button>
+                </a>
+            }
+        }
+    </div>
 </div>
+
+
