--- a/VocationManager/Views/Users/Create.cshtml
+++ b/VocationManager/Views/Users/Create.cshtml
@@ -6,56 +6,58 @@
     var roles = ((IEnumerable<KeyValuePair<string, string>>)this.ViewBag.AvailableRoles).Select(x => new SelectListItem(x.Value, x.Key.ToString()));
 }
 
-<h1>Create</h1>
+<div class="card light-shadow m-0 m-auto col-5">
+    <div class="img-fluid text-center mt-2">
+        <img class="card-img-top img-fluid" style="width: 20rem" style="object-fit: contain" src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973461_960_720.png" alt="Person image">
+    </div>
+    <div class="card-body">
+        <h5 class="card-title">Create new user</h5>
+        <div>
+            <form asp-action="Create">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="Username" class="control-label"></label>
+                    <input asp-for="Username" class="form-control"/>
+                    <span asp-validation-for="Username" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Email" class="control-label"></label>
+                    <input asp-for="Email" class="form-control"/>
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="FirstName" class="control-label"></label>
+                    <input asp-for="FirstName" class="form-control"/>
+                    <span asp-validation-for="FirstName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="LastName" class="control-label"></label>
+                    <input asp-for="LastName" class="form-control"/>
+                    <span asp-validation-for="LastName" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Password" class="control-label"></label>
+                    <input asp-for="Password" class="form-control" type="password"/>
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="SelectedRole" class="control-label">Role</label>
+                    <select asp-for="SelectedRole" class="form-control form-control-lg" asp-items="roles">
+                        <option value="" selected="">Select role...</option>
+                    </select>
+                </div>
+                <br/>
+                <div class="form-group d-flex justify-content-evenly">
+                    <a asp-action="Index">
+                        <button class="btn btn-primary" type="button">
+                            <i class="fas fa-backward"></i> Back to List
+                        </button>
+                    </a>
 
-<h4>New user</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Username" class="control-label"></label>
-                <input asp-for="Username" class="form-control" />
-                <span asp-validation-for="Username" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FirstName" class="control-label"></label>
-                <input asp-for="FirstName" class="form-control" />
-                <span asp-validation-for="FirstName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="LastName" class="control-label"></label>
-                <input asp-for="LastName" class="form-control" />
-                <span asp-validation-for="LastName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" type="password" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="SelectedRole" class="control-label">Role</label>
-                <select asp-for="SelectedRole" class="form-control form-control-lg" asp-items="roles">
-                    <option value="" selected="">Select role...</option>
-                </select>
-            </div>
-            <br />
-            <div class="form-group">
-                <a asp-action="Index">
-                    <button class="btn btn-primary" type="button">
-                        <i class="fas fa-backward"></i> Back to List
-                    </button>
-                </a>
-
-                <input type="submit" value="Create" class="btn btn-success"/>
-            </div>
-        </form>
+                    <input type="submit" value="Create" class="btn btn-success"/>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
