Филтриране на потребители по потребителски, собствено, фамилно име и роля

--- a/VocationManager.Web/Views/Users/Index.cshtml
+++ b/VocationManager.Web/Views/Users/Index.cshtml
@@ -63,7 +63,7 @@
             </div>
         }
     </div>
-    @await Html.PartialAsync("_Pagination", Model.Paginator)
+    @await Html.PartialAsync("_SearchAndPaginatePartial", Model.Paginator)
 }
 else
 {
