--- a/VocationManager.Web/Views/Shared/_SearchAndPaginatePartial.cshtml
+++ b/VocationManager.Web/Views/Shared/_SearchAndPaginatePartial.cshtml
@@ -1,7 +1,17 @@
 ﻿@model VocationManager.Services.Paginator;
 
-<div class="mt-5 d-flex align-items-center justify-content-center">
+<div class="input-group d-flex justify-content-center mt-5">
+    <div class="form-outline">
+        <input type="search" id="keyword" class="form-control"/>
+    </div>
+    <button type="button" id="search-btn" class="btn btn-primary">
+        <i class="fas fa-search"></i>
+    </button>
+</div>
+
+<div class="mt-1 d-flex align-items-center justify-content-center">
     <input type="hidden" id="main-path" value="@(Model.MainPath)" />
+
     <select name="size" id="size" class="custom-select custom-select-lg">
         <option selected value="10">10</option>
         <option value="25">25</option>
@@ -41,8 +51,25 @@
 
 <script>
     $( "#size" ).change(function() {
-        var val = $("#size").val();
+        var pageSize = $("#size").val();
         var controllerName = $("#main-path").val();
-        window.location.href = `/${controllerName}?page=1&pageSize=${val}`;
+        window.location.href = `/${controllerName}?page=1&pageSize=${pageSize}`;
     });
+
+    $("#search-btn").click(initiateSearch);
+
+    $("#keyword").on("keypress",
+        function(event) {
+            var keycode = (event.keyCode ? event.keyCode : event.which);
+            if(keycode == '13') {
+                initiateSearch();
+            }
+        });
+
+    function initiateSearch() {
+        var keyword = $("#keyword").val();
+        var controllerName = $("#main-path").val();
+        var pageSize = $("#size").val();
+        window.location.href = `/${controllerName}?page=1&pageSize=${pageSize}&keyword=${keyword}`;
+    }
 </script>
