--- a/VocationManager.Web/Views/Users/Create.cshtml
+++ b/VocationManager.Web/Views/Users/Create.cshtml
@@ -1,4 +1,5 @@
-﻿@model VocationManager.Services.DTOs.CreateUserDto
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model VocationManager.Services.DTOs.Users.CreateUserDto
 
 @{
     ViewData["Title"] = "Create";
