--- a/VocationManager.Web/Views/Users/Index.cshtml
+++ b/VocationManager.Web/Views/Users/Index.cshtml
@@ -1,8 +1,7 @@
-﻿@using VocationManager.Services.DTOs
-@using VocationManager.Services
-@using Microsoft.AspNetCore.Mvc.TagHelpers
+﻿@using VocationManager.Services
 @using System.Security.Claims
-@model PaginatedUsersCollectionDto
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model VocationManager.Services.DTOs.Users.PaginatedUsersCollectionDto
 
 @{
     ViewData["Title"] = "Index";
