--- a/VocationManager.Web/Views/Users/Edit.cshtml
+++ b/VocationManager.Web/Views/Users/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model VocationManager.Services.DTOs.BaseUserDto
+﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@model VocationManager.Services.DTOs.Users.BaseUserDto
 
 @{
     ViewData["Title"] = "Edit";
