--- a/VocationManager.Web/Views/Shared/_SearchAndPaginatePartial.cshtml
+++ b/VocationManager.Web/Views/Shared/_SearchAndPaginatePartial.cshtml
@@ -1,56 +1,69 @@
 ﻿@model VocationManager.Services.Paginator;
 
-<div class="input-group d-flex justify-content-center mt-5">
-    <div class="form-outline">
-        <input type="search" id="keyword" class="form-control"/>
+@if (Model.IncludeSearchBar)
+{
+    <div class="input-group d-flex justify-content-center mt-5">
+        <div class="form-outline">
+            <input type="search" id="keyword" class="form-control" />
+        </div>
+        <button type="button" id="search-btn" class="btn btn-primary">
+            <i class="fas fa-search"></i>
+        </button>
     </div>
-    <button type="button" id="search-btn" class="btn btn-primary">
-        <i class="fas fa-search"></i>
-    </button>
-</div>
+}
+
 
 <div class="mt-1 d-flex align-items-center justify-content-center">
     <input type="hidden" id="main-path" value="@(Model.MainPath)" />
 
     <select name="size" id="size" class="custom-select custom-select-lg">
+        <option value="5">5</option>
         <option selected value="10">10</option>
         <option value="25">25</option>
         <option value="50">50</option>
     </select>
 
     <!-- pager -->
-        <nav aria-label="Page navigation">
-            <ul class="pagination justify-content-center mt-0 mb-0">
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center mt-0 mb-0">
 
-                <li class="page-item @(Model.CurrentPage > 1 ? "" : "disabled")">
-                    <a href="~/@(Model.MainPath)" class="page-link">First</a>
+            <li class="page-item @(Model.CurrentPage > 1 ? "" : "disabled")">
+                <a href="~/@(Model.MainPath)" class="page-link">First</a>
+            </li>
+
+            <li class="page-item @(Model.CurrentPage > 1 ? "" : "disabled")">
+                <a href="~/@(Model.MainPath)?page=@(Model.CurrentPage - 1)" class="page-link">Previous</a>
+            </li>
+
+
+            @for (var page = Model.StartPage; page <= Model.EndPage; page++)
+            {
+                <li class="page-item @(page == Model.CurrentPage ? "active" : "")">
+                    <a href="~/@(Model.MainPath)?page=@(page)" class="page-link">@(page)</a>
                 </li>
+            }
 
-                <li class="page-item @(Model.CurrentPage > 1 ? "" : "disabled")">
-                    <a href="~/@(Model.MainPath)?page=@(Model.CurrentPage - 1)" class="page-link">Previous</a>
-                </li>
+            <li class="page-item @(Model.CurrentPage < Model.TotalPages ? "" : "disabled")">
+                <a href="~/@(Model.MainPath)?page=@(Model.CurrentPage + 1)" class="page-link">Next</a>
+            </li>
 
-
-                @for (var page = Model.StartPage; page <= Model.EndPage; page++)
-                {
-                    <li class="page-item @(page == Model.CurrentPage ? "active" : "")">
-                        <a href="~/@(Model.MainPath)?page=@(page)" class="page-link">@(page)</a>
-                    </li>
-                }
-
-                <li class="page-item @(Model.CurrentPage < Model.TotalPages ? "" : "disabled")">
-                    <a href="~/@(Model.MainPath)?page=@(Model.CurrentPage + 1)" class="page-link">Next</a>
-                </li>
-
-                <li class="page-item @(Model.CurrentPage < Model.TotalPages ? "" : "disabled")">
-                    <a href="~/@(Model.MainPath)?page=@(Model.TotalPages)" class="page-link">Last</a>
-                </li>
-            </ul>
-        </nav>
+            <li class="page-item @(Model.CurrentPage < Model.TotalPages ? "" : "disabled")">
+                <a href="~/@(Model.MainPath)?page=@(Model.TotalPages)" class="page-link">Last</a>
+            </li>
+        </ul>
+    </nav>
 </div>
 
 <script>
-    $( "#size" ).change(function() {
+    //$(function() {
+    //    var selectedValueForSize = $("#size-selected-val");
+    //    var sizeFromUrl = window.location.href.split("pageSize=")[1] || 10;
+
+    //    selectedValueForSize.text(sizeFromUrl);
+    //    selectedValueForSize.val(sizeFromUrl);
+    //});
+
+    $("#size").change(function () {
         var pageSize = $("#size").val();
         var controllerName = $("#main-path").val();
         window.location.href = `/${controllerName}?page=1&pageSize=${pageSize}`;
@@ -59,9 +72,9 @@
     $("#search-btn").click(initiateSearch);
 
     $("#keyword").on("keypress",
-        function(event) {
+        function (event) {
             var keycode = (event.keyCode ? event.keyCode : event.which);
-            if(keycode == '13') {
+            if (keycode == '13') {
                 initiateSearch();
             }
         });
